refactor: extract PageResponse builder to utility class